# AffineBigramCipher

./: CMakeLists.txt  README.md
include/: functions.h  functions2.h  functions3.h
resources/: abc.txt  encipheredText.txt
src/: functions.cpp  functions2.cpp  functions3.cpp  main.cpp
